# FlightManageSystem

./: README.md
source/: CMakeLists.txt  CMakePresets.json  Flight.cpp  Flight.hpp  IO.cpp  IO.hpp  MainWindow.ui  Util.cpp  Util.hpp  add.ui  book.ui  list.ui  main.cpp  passager.ui  query.ui  sell.ui  train.hpp  window.cpp  window.hpp
source/.cache/clangd/index/: IO.cpp.3379AA21486FACBB.idx  IO.hpp.2167A24A9957BA4F.idx  main.cpp.2526AE780879435C.idx  train.hpp.762F13B109709BE8.idx  window.cpp.47605B8652B5E7D1.idx  window.hpp.CA5B4CAA0C76ADD5.idx
